# smtools

./: .gitignore  README.md  pyproject.toml
src/smtools/: tools.py
src/smtools_cli/: __main__.py  models.py
src/tests/: test_contains_dir.py  test_contains_file.py  test_get_dir_size.py
